finished the basic tutorial for the todolist

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ input {
     font-size: 16px; 
 }
 
-/*& style the "add" button */ 
+/* style the "add" button */ 
 .addBtn {
     padding: 10px;
     width: 25%; 
